# opengl-demo

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
res/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.cpp  camera.hpp  glsl_program.cpp  glsl_program.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  model.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  shader.hpp  static_object.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
